created a full elk stack to track records
